# video_background_estimation

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  run.py
notebooks/: background_estimation.ipynb
tests/: test_background_estimation.py
video_background_estimation/: EstimateBackground.py  __init__.py
