[tool.poetry]
name = "video-background-estimation"
version = "0.1.1"
description = "background estimation based on simple techniques"
authors = [ "Rajesh Shreedhar Bhat <rajeshbht19@gmail.com>", ]
license = "MIT"
readme = "README.md"
packages = [{include = "video_background_estimation"}]
repository = "https://github.com/rajesh-bhat/video_background_estimation"
keywords = ["video background estimation", "background extraction from video"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.7.0.68"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.6.3"
jupyter = "^1.0.0"
black = "^22.12.0"
pytest = "^7.2.1"
isort = "^5.11.4"
pre-commit = "^2.21.0"
poetry-bumpversion = "^0.3.0"
flake8 = "5.0.4"


[tool.isort]
# more configs here: https://pycqa.github.io/isort/docs/configuration/options.html
skip = [".gitignore"]
force_single_line = false #Forces all from imports to appear on their own line
line_length = 150  # The max length of an import line (used for wrapping long imports) 

[tool.black]
line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.poetry_bumpversion.file."video-background-estimation/__init__.py"]

[project.urls]
"Issue Tracker" = "https://github.com/rajesh-bhat/video_background_estimation/issues"

[build-system]                                                                                                                                          
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


